Alterations to menu button styling in mobile view, reducing mobile icons area to make sure bottom 2 icons do not get cut off on iPhone, modifying search form to include placeholder text

--- a/sites/all/themes/ask_theme/css/fonts.css
+++ b/sites/all/themes/ask_theme/css/fonts.css
@@ -201,7 +201,7 @@ a.def{font-family:'OpenSansBold'; color:#E69C30; text-decoration:none; }
 .nav a{text-decoration:none;}
 .main-menu a, .main-menu a:active{font-size:1.3em;}
 
-.navbar-default{font-family:'alegreya_sans_scregular'}
+.navbar-default .navbar-toggle{font-family:'alegreya_sansregular'; text-transform:uppercase;}
 
 .main-menu a.active, .main-menu a.active-trail{border-bottom:#E69C30 3px solid;font-family:'alegreya_sansmedium';}
 
@@ -301,13 +301,13 @@ h3{font-family:'OpenSansSemibold'; margin-bottom:0px; letter-spacing:-.03em; lin
 	.navbar-collapse ul{padding:15px 0;}
 	.navbar-collapse ul ul{padding:0 0 10px 0; margin:0;}
 	.navbar-collapse li{padding:0 15px; margin:0;}
-	.navbar-toggle{
-		padding:0 10px;
+	.navbar-default .navbar-toggle{
+		padding:2px 15px 3px;
 		border-radius:9px;
 		-moz-border-radius:9px;
 		-webkit-border-radius:9px;
 	}
-	.navbar-default .navbar-toggle{background:#e69c30; border:#fff 1px solid; font-size:1.3em; padding:0 15px 4px;}
+	.navbar-default .navbar-toggle{background:#e69c30; border:#fff 1px solid; font-size:1.1em;}
 	.navbar-default .navbar-toggle .icon-bar{background:#fff; height:4px; width:25px;}
 	.navbar-default .navbar-toggle:hover{background:#fff; border:#e69c30 1px solid; color:#e69c30;}
 	.navbar-default .navbar-toggle:hover .icon-bar{background:#e69c30;}
@@ -324,6 +324,6 @@ h3{font-family:'OpenSansSemibold'; margin-bottom:0px; letter-spacing:-.03em; lin
 	.content-callout{font-size:1.1em;}
 
 	/* navbar */
-	.navbar-default .navbar-toggle{padding:0 9px 2px; margin-bottom:0;}
+	.navbar-default .navbar-toggle{padding:1px 10px 2px; margin-bottom:0;}
 	.navbar-default .navbar-toggle .icon-bar{height:3px;}
 }
